# k-daytrade-morning-agent

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codex-review.yml  daily-report.yml
config/: app.yml  category_weights.yml  data_sources.yml  holidays_kr.example.yml  risk_rules.yml  watchlist.example.yml
content/reports/2026-04-27/: report.md  summary.json  verification.json
daytrade_agent/: __init__.py  cli.py  config.py  paths.py
daytrade_agent/calendar/: __init__.py  trading_calendar.py
daytrade_agent/collectors/: __init__.py  base.py  corporate_disclosure.py  global_issue.py  mock.py  news_provider.py  political_theme.py  price_snapshot.py  theme_surge.py
daytrade_agent/llm/: __init__.py  codex_app_server.py  codex_binary.py  codex_preflight.py  prompt_builder.py  report_verifier.py  report_writer.py
daytrade_agent/normalizers/: deduplicate.py  event_schema.py  symbol_resolver.py
daytrade_agent/render/: __init__.py  markdown.py  site_builder.py
daytrade_agent/scoring/: candidate_score.py  risk_flags.py
daytrade_agent/storage/: __init__.py  report_store.py
prompts/: master_morning_briefing.md  verifier.md
site_templates/: archive.html  base.html  index.html  report.html
site_templates/assets/: style.css
tests/: test_candidate_score.py  test_cli_dry_run.py  test_event_schema.py  test_news_provider.py  test_price_snapshot.py  test_prompt_builder.py  test_report_verifier.py  test_site_builder.py
tests/fixtures/: sample_candidates.json  sample_events.json  sample_report.md
(+15 files in other folders)
